# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-voice_agent_env"
version = "1.0.0"
description = "Voice Agent Prompt Optimizer - RL environment for post-call voice agent prompt optimization"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "voice_agent_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["voice_agent_env", "voice_agent_env.server"]
package-dir = { "voice_agent_env" = ".", "voice_agent_env.server" = "server" }
